# cart

./: .env  .gitignore  README.md  build.sh  docker-compose.yml  entrypoint.sh
consensus/bft-smart/: build.gradle  settings.gradle
consensus/bft-smart/config/: logback.debug.xml  logback.xml
consensus/bft-smart/gradle/wrapper/: gradle-wrapper.properties
consensus/bft-smart/src/main/java/cart/adapter/: BFTClientSocketAdapter.java  CombinedConsensusSocketAdapter.java
crypto/: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
crypto/include/binding/: FFMBinding.h  cart_binding_JNIBinding.h
crypto/include/bls/: LagrangeCoefficients.h  Polynomial.h  PrivateKey.h  PublicKey.h  Signature.h  util.h
crypto/include/util/: BLSKeyWrapper.h  config.h  util.h
crypto/src/apps/: aggregation_test.cpp  microbenchmark.cpp
crypto/src/binding/: FFMBinding.cpp  JNIBinding.cpp
crypto/src/bls/: LagrangeCoefficients.cpp  Polynomial.cpp  PrivateKey.cpp  PublicKey.cpp  Signature.cpp  util.cpp
crypto/src/util/: BLSKeyWrapper.cpp  config.cpp  util.cpp
demo/YCSB-CART/: build.gradle  settings.gradle
demo/YCSB-CART/config/: cart_aws_hosts.config  cart_vs_hosts.config  cart_ycsb_hosts.config
demo/YCSB-CART/config/workloads/: warmup  workloada
demo/YCSB-CART/gradle/wrapper/: gradle-wrapper.properties
demo/YCSB-CART/scripts/: ycsbBenchmark.sh
demo/YCSB-CART/src/main/java/ycsb/client/: YCSBClient.java  YCSBClientOptimizedReads.java  YCSBClientOptimizedReadsVerified.java  YCSBClientVerified.java
demo/YCSB-CART/src/main/java/ycsb/datastructures/: YCSBMessage.java  YCSBTable.java
demo/YCSB-CART/src/main/java/ycsb/server/: YCSBServer.java
docker/client/: Dockerfile
docker/crypto/: Dockerfile
docker/java/: Dockerfile
docker/server/: Dockerfile
wrapper/: Dockerfile  build.gradle  settings.gradle
wrapper/gradle/wrapper/: gradle-wrapper.properties
wrapper/src/main/java/cart/adapter/: ApplicationSocketAdapter.java  ReadOnlyRequest.java
wrapper/src/main/java/cart/binding/: JNIBinding.java  cart_binding_JNIBinding.h
wrapper/src/main/java/cart/client/: ClientSideCART.java
wrapper/src/main/java/cart/server/: ServerSideCART.java
wrapper/src/main/java/cart/setup/: HostInfo.java  IdClient.java  IdServer.java
wrapper/src/main/java/cart/types/: ReplicaRole.java  ResponseStatus.java  VerificationStrategy.java
wrapper/src/main/java/cart/types/aggregation/: AggregatedSignature.java  AggregationRequest.java
wrapper/src/main/java/cart/types/signature/: BLSSignature.java  BatchSignatureRequest.java  SignatureRequest.java  SingleSignatureRequest.java
wrapper/src/main/proto/: client-proxy.proto  collector.proto  debug.proto  enums.proto  id.proto  read-only.proto
